--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <script>
         function choose(a=1) {
             if(a==1) {
-                location.href="https://co-co.tk/PAS/?processor=https://merret.github.io/MyInstantlySite/P";
+                location.href="https://co-co.tk/PAS/?processor=https://merret.github.io/PAS";
             } else if(a==2){
-                location.href="https://co-co.tk/PAS/?processor=https://merret.github.io/MyInstantlySite/P";
+                location.href="https://co-co.tk/PAS/?processor=https://merret.github.io/PAS";
             }
         }
     </script>
