--- a/space.html
+++ b/space.html
@@ -79,6 +79,8 @@
         function addSite(n, name, LEtime, Ctime) {
             var sdiv = document.createElement('div');
             sdiv.id = "site" + n;
+	    sdiv.className = "w3-panel w3-pale-blue w3-leftbar w3-border-blue";
+	    sdiv.style.textAlign = "left";
             ss.appendChild(sdiv);
             var base = elm.id("site" + n);
             var stitle = document.createElement('h3');
