--- a/space.html
+++ b/space.html
@@ -79,7 +79,7 @@
         function addSite(n, name, LEtime, Ctime) {
             var sdiv = document.createElement('div');
             sdiv.id = "site" + n;
-	    sdiv.className = "w3-panel w3-pale-blue w3-leftbar w3-border-blue w3-padding";
+	    sdiv.className = "w3-panel w3-pale-blue w3-leftbar w3-border-blue w3-margin";
 	    sdiv.style.textAlign = "left";
             ss.appendChild(sdiv);
             var base = elm.id("site" + n);
