--- a/site/create.html
+++ b/site/create.html
@@ -62,7 +62,7 @@
         <h1>Create Your Site</h1>
     </div>
     <div id="siteForm" style="padding: 4rem 0;">
-        <p>Site Name: <input id="Sname" type="text" placeholder="Enter Site Name (1 ~ 64 letters)" maxlength="64" required></p>
+        <p>Site Name: <input id="Sname" min-width="320px" max-width="640px" type="text" placeholder="Enter Site Name (1 ~ 64 letters)" maxlength="64" required></p>
         <p>Index File: </p>
         <p style="color: lightgray">PS: Every website has its "Index File". It is the homepage of a website.</p>
         <textarea id="Sindex" placeholder="The Index File Of Your Site" required>
