--- a/site/create.html
+++ b/site/create.html
@@ -79,7 +79,7 @@
         <h1>Create Your Site</h1>
     </div>
     <div id="siteForm" style="padding: 4rem 0; margin: 0 15%; text-align: left">
-        <p>Site Name: <input id="Sname" min-width="320px" max-width="640px" type="text" style="width:16rem; overflow:hidden; border: 1px solid rgba(0,0,0,0.6);" placeholder="Enter Site Name (1 ~ 64 letters)" maxlength="64" required></p>
+        <p>Site Name: <input id="Sname" min-width="320px" max-width="640px" type="text" style="padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:16rem" placeholder="Enter Site Name (1 ~ 64 letters)" maxlength="64" required></p>
         <p>Index File: </p>
         <p style="color: gray">PS: Every website has its "Index File". It is the homepage of a website.</p>
         <textarea id="Sindex" placeholder="The Index File Of Your Site" required class="bgTheme notranslate" style="border: 0; width: 100%; font-size: 1.2rem; box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);" rows="12" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
