--- a/site/create.html
+++ b/site/create.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.2/js/xhr.min.js"></script>
     <style>
         body {
             text-align: center;
