--- a/site/create.html
+++ b/site/create.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.2/js/xhr.min.js"></script>
     <style>
         body {
             text-align: center;
@@ -30,21 +29,21 @@
             animation-duration: 30s;
         }
         button {
-	    border: none; 
-	    cursor: pointer; 
-            display: inline-block; 
-            margin: 1rem 0px; 
-            padding: 0.6rem 0px; 
-            font-size: 1.2rem; 
-            width: 16rem; 
-            vertical-align: middle; 
-            overflow: hidden; 
-            text-decoration: none; 
+            border: none;
+            cursor: pointer;
+            display: inline-block;
+            margin: 1rem 0px;
+            padding: 0.6rem 0px;
+            font-size: 1.2rem;
+            width: 16rem;
+            vertical-align: middle;
+            overflow: hidden;
+            text-decoration: none;
             white-space: nowrap;
         }
-	br.mBR {
-	    display: none;
-	}
+        br.mBR {
+            display: none;
+        }
         @keyframes bgChange {
             0% {background-color: rgba(255,0,0,0.5);}
             33% {background-color: rgba(0,255,0,0.5);}
@@ -63,12 +62,12 @@
             67% {border: 1px solid rgba(0,0,255,0.5);}
             100% {border: 1px solid rgba(255,0,0,0.5);}
         }
-	@media only screen and (max-width: 600px) {
-	    br.mBR {
-		display: block;
-	    }
-	}
-	input[type=text]:focus {
+        @media only screen and (max-width: 600px) {
+            br.mBR {
+                display: block;
+            }
+        }
+        input[type=text]:focus {
             animation-name: BDcolorChange;
             animation-iteration-count: infinite;
             animation-duration: 15s;
@@ -85,7 +84,7 @@
         <p style="color: gray">PS: Every website has its "Index File". It is the homepage of a website.</p>
         <textarea id="Sindex" placeholder="The Index File Of Your Site" required class="bgTheme notranslate" style="border: 0; width: 100%; font-size: 1.2rem; box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);" rows="12" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
         <br>
-        <button class="bgTheme" style="border: none; display: inline-block; margin: 1rem 0; padding: 0.6rem 0; font-size: 1.2rem; width: 10rem; vertical-align: middle; overflow: hidden; text-decoration: none; white-space: nowrap" onclick="">Create</button>
+        <button class="bgTheme" style="border: none; display: inline-block; margin: 1rem 0; padding: 0.6rem 0; font-size: 1.2rem; width: 10rem; vertical-align: middle; overflow: hidden; text-decoration: none; white-space: nowrap" onclick="createSite()">Create</button>
     </div>
     <div class="bgTheme" style="padding: 2rem 0; margin: -2rem; position: relative; left: 0; right: 0; bottom: 0;">
         <h3>Copyright © 2018<a href="https://merret.github.io/MyInstantlySite"> My Instantly Site! </a></h3>
@@ -94,6 +93,9 @@
     <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.3/js/element.js"></script>
     <script>
         
+        function createSite() {
+            
+        }
     </script>
 </body>
 </html>
