--- a/site/index.html
+++ b/site/index.html
@@ -75,7 +75,7 @@
     <div class="bgTheme" style="padding: 5rem 0; margin: -2rem;">
         <h1 id="h"></h1>
     </div>
-    <div id="site" style="padding: 4rem 0;">
+    <div id="site" style="padding: 4rem 0; margin: 0 4rem; text-align: left">
         <h2>Site Name: </h2><input id="Sname" min-width="320px" max-width="640px" type="text" style="padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:16rem" placeholder="Enter Site Name (1 ~ 64 letters)" maxlength="64" required>
         <h2>Site URL: </h2>
     </div>
