--- a/site/list.html
+++ b/site/list.html
@@ -74,11 +74,12 @@
         var data = xhr.json(userSiteList);
         ss.innerHTML = "";
         for(var i = 0; i < data.sites.length; i++) {
-            addSite(i, data.sites[i].name, data.sites[i].LEtime, data.sites[i].Ctime);
+            addSite(i, data.sites[i].name, data.sites[i].LEtime, data.sites[i].Ctime, data.sites[i].data);
         }
-        function addSite(n, name, LEtime, Ctime) {
+        function addSite(n, name, LEtime, Ctime, loc) {
             var sdiv = document.createElement('div');
             sdiv.id = "site" + n;
+            sdiv.onclick = function() {location.href = "./?"+loc};
             sdiv.className = "w3-panel w3-pale-blue w3-leftbar w3-border-blue w3-margin";
             sdiv.style.textAlign = "left";
             ss.appendChild(sdiv);
