--- a/site/index.html
+++ b/site/index.html
@@ -91,15 +91,17 @@
         elm.id("h").innerHTML = d["site_name"];
         elm.id("Sname").value = d["site_name"];
         function save() {
+            var t = new Date().toJSON();
             var tempD = d;
             tempD["site_name"] = elm.id("Sname").value;
-            tempD["site_edited_time"] = new Date().toJSON();
+            tempD["site_edited_time"] = t;
             var r = xhr.put("https://api.myjson.com/bins/"+window.location.href.substr(x.length+1), JSON.stringify(tempD));
             var userSiteList = (xhr.json("https://api.myjson.com/bins/"+localStorage.UserInfos)).MISuserSiteList;
             var Ldata = xhr.json(userSiteList);
             for(var i = 0; i < Ldata.sites.length; i++) {
                 if(Ldata.sites[i].name==d["site_name"]) {
-                    Ldata.sites[i].name=tempD["site_name"];
+                    Ldata.sites[i].name = tempD["site_name"];
+                    Ldata.sites[i].LEtime = t;
                 }
             }
             xhr.put(userSiteList, JSON.stringify(Ldata));
