--- a/site/index.html
+++ b/site/index.html
@@ -99,8 +99,8 @@
             var userSiteList = (xhr.json("https://api.myjson.com/bins/"+localStorage.UserInfos)).MISuserSiteList;
             var Ldata = xhr.json(userSiteList);
             for(var i = 0; i < Ldata.sites.length; i++) {
-                if(Ldata.sites[i].name==d["site_name"]) {
-                    Ldata.sites[i].name = elm.id("Sname").value;
+                if(Ldata.sites[i]["name"]==d["site_name"]) {
+                    Ldata.sites[i]["name"] = elm.id("Sname").value;
                     Ldata.sites[i].LEtime = t;
                 }
             }
