--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     <script>
         function choose(a=1) {
             if(a==1) {
-		localStorage.goWhere = "https://merret.github.io/MyInstantlySite/space";
+		localStorage.goWhere = "https://merret.github.io/MyInstantlySite/site/list";
                 location.href="https://co-co.tk/PAS/?processor=https://merret.github.io/PAS";
             } else if(a==2){
-		localStorage.goWhere = "https://merret.github.io/MyInstantlySite/space";
-                location.href="https://co-co.tk/PAS/?processor=https://merret.github.io/PAS";
+		localStorage.goWhere = "https://merret.github.io/MyInstantlySite/site/list";
+                location.href="https://co-co.tk/PAS/r.php?processor=https://merret.github.io/PAS";
             }
         }
     </script>
