--- a/site/index.html
+++ b/site/index.html
@@ -26,6 +26,9 @@
             color: deepskyblue;
             text-decoration: none;
         }
+        .clickable {
+            cursor: pointer;
+        }
         .bgTheme {
             animation-name: bgChange;
             animation-iteration-count: infinite;
