--- a/site/list.html
+++ b/site/list.html
@@ -26,6 +26,9 @@
             color: deepskyblue;
             text-decoration: none;
         }
+        .clickable {
+            cursor: pointer;
+        }
         .bgTheme {
             animation-name: bgChange;
             animation-iteration-count: infinite;
@@ -80,7 +83,7 @@
             var sdiv = document.createElement('div');
             sdiv.id = "site" + n;
             sdiv.onclick = function() {location.href = "./?"+loc};
-            sdiv.className = "w3-panel w3-pale-blue w3-leftbar w3-border-blue w3-margin";
+            sdiv.className = "clickable w3-panel w3-pale-blue w3-leftbar w3-border-blue w3-margin";
             sdiv.style.textAlign = "left";
             ss.appendChild(sdiv);
             var base = elm.id("site" + n);
