--- a/site/list.html
+++ b/site/list.html
@@ -88,6 +88,8 @@
         var adds = document.createElement('h1');
         adds.innerHTML = "+";
         adds.fontWeight = "700";
+        adds.fontSize = "4rem";
+        adds.className = "w3-round w3-padding";
         sdiv.appendChild(adds);
         ss.appendChild(sdiv);
         
