--- a/site/list.html
+++ b/site/list.html
@@ -87,9 +87,9 @@
         sdiv.style.textAlign = "center";
         var adds = document.createElement('h1');
         adds.innerHTML = "+";
-        adds.fontWeight = "700";
-        adds.fontSize = "4rem";
-        adds.className = "w3-round w3-padding";
+        adds.fontWeight = "900";
+        adds.fontSize = "8rem";
+        adds.className = "w3-round w3-padding w3-margin";
         sdiv.appendChild(adds);
         ss.appendChild(sdiv);
         
