--- a/site/index.html
+++ b/site/index.html
@@ -114,6 +114,21 @@
                 location.reload();
             }
         }
+        function del() {
+            if(!confirm("Delete this website?\nThis action can't be redo!")) {
+                return;
+            }
+            var userSiteList = (xhr.json("https://api.myjson.com/bins/"+localStorage.UserInfos)).MISuserSiteList;
+            var Ldata = xhr.json(userSiteList);
+            for(var i = 0; i < Ldata.sites.length; i++) {
+                if(Ldata.sites[i]["name"]==d["site_name"]) {
+                    Ldata.sites.splice(i, 1);
+                }
+            }
+            xhr.put(userSiteList, JSON.stringify(Ldata));
+            alert("This site has been deleted successfully.\nDirecting you to sites list page...");
+            location.href = "list";
+        }
     </script>
 </body>
 </html>
