--- a/site/index.html
+++ b/site/index.html
@@ -82,6 +82,7 @@
         <h2 id="sn">Site Name: </h2><input id="Sname" min-width="320px" max-width="640px" type="text" style="padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:16rem" placeholder="Enter Site Name (1 ~ 64 letters)" maxlength="64" required>
         <h2>Site URL: </h2>
         <button class="bgTheme" style="border: none; display: inline-block; margin: 1rem 0; padding: 0.6rem 0; font-size: 1.2rem; width: 10rem; vertical-align: middle; overflow: hidden; text-decoration: none; white-space: nowrap" onclick="save()">Save</button>
+        <button style="color: red; border: none; display: inline-block; margin: 1rem 0; padding: 0.6rem 0; font-size: 1.2rem; width: 10rem; vertical-align: middle; overflow: hidden; text-decoration: none; white-space: nowrap" onclick="del()">Delete</button>
         <button style="border: 1px solid black; display: inline-block; margin: 1rem 0; padding: 0.6rem 0; font-size: 1.2rem; width: 10rem; vertical-align: middle; overflow: hidden; text-decoration: none; white-space: nowrap" onclick="location.href='list';">Back</button>
     </div>
     <script>
@@ -116,6 +117,7 @@
         }
         function del() {
             if(!confirm("Delete this website?\nThis action can't be redo!")) {
+                alert("Delete has been cancelled.");
                 return;
             }
             var userSiteList = (xhr.json("https://api.myjson.com/bins/"+localStorage.UserInfos)).MISuserSiteList;
