--- a/site/index.html
+++ b/site/index.html
@@ -106,6 +106,7 @@
                 if(Ldata.sites[i]["name"]==d["site_name"]) {
                     Ldata.sites[i]["name"] = elm.id("Sname").value;
                     Ldata.sites[i].LEtime = t;
+                    break;
                 }
             }
             xhr.put(userSiteList, JSON.stringify(Ldata));
@@ -125,6 +126,7 @@
             for(var i = 0; i < Ldata.sites.length; i++) {
                 if(Ldata.sites[i]["name"]==d["site_name"]) {
                     Ldata.sites.splice(i, 1);
+                    break;
                 }
             }
             xhr.put(userSiteList, JSON.stringify(Ldata));
