--- a/site/list.html
+++ b/site/list.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script>
+        if(!localStorage.UserInfos)
+            location.href = "../";
+    </script>
     <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.3/js/xhr.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.3/js/element.js"></script>
     <style>
