--- a/site/create.html
+++ b/site/create.html
@@ -4,6 +4,10 @@
     <title>Create Your Site - My Instantly Site!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+        if(!localStorage.UserInfos)
+            location.href = "../";
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
     <style>
         body {
