--- a/site/create.html
+++ b/site/create.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
         if(!localStorage.UserInfos)
-            location.href = "../";
+            location.href = "../?r=1";
     </script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
     <style>
