--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
         <h3>Copyright © 2018<a href="https://merret.github.io/MyInstantlySite"> My Instantly Site! </a></h3>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.3/js/xhr.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Merret/UsefulJS@0.5.3/js/urldata.js"></script>
     <script>
+	if(urldata("r")) {
+	    alert("You should login first");
+	}
         function choose(a=1) {
             if(a==1) {
 		localStorage.goWhere = "https://merret.github.io/MyInstantlySite/site/list";
