--- a/site/index.html
+++ b/site/index.html
@@ -148,9 +148,9 @@
             var sdiv = document.createElement('div');
             sdiv.id = "f-" + name;
             sdiv.onclick = function() {readFile(data);};
-            var color = "light-grey";
+            var color = "green";
             if(type == "html") {
-                color = "orange";
+                color = "red";
             } else if(type == "js") {
                 color = "yellow";
             } else if(type == "css") {
